<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0.0dip"
        android:layout_height="180.0dip"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/header_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="0.0dip"
        android:layout_height="29.0sp"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/drawer_developer"
        android:textColor="@android:color/white"
        android:textSize="26.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/headerImage"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/headerEmail"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/drawer_email"
        android:textColor="@android:color/white"
        android:textSize="14.0sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitle" />

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fa_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImage" />

    <TextView
        android:id="@+id/menuHome"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/drawer_home"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="@id/imageHome"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageHome"
        app:layout_constraintTop_toTopOf="@id/imageHome" />

    <ImageView
        android:id="@+id/imageCategories"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHome" />

    <TextView
        android:id="@+id/menuCategories"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/drawer_category"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="@id/imageCategories"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageCategories"
        app:layout_constraintTop_toTopOf="@id/imageCategories" />

    <ImageView
        android:id="@+id/imageFavourite"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCategories" />

    <TextView
        android:id="@+id/menuFavourite"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/drawer_favourite"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="@id/imageFavourite"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageFavourite"
        app:layout_constraintTop_toTopOf="@id/imageFavourite" />

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.100000024dip"
        android:layout_marginTop="10.0dip"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageFavourite" />

    <TextView
        android:id="@+id/Communicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/title_communicate"
        android:textColor="@android:color/white"
        android:textSize="14.0sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageView
        android:id="@+id/imageShare"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_share"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Communicate" />

    <TextView
        android:id="@+id/menuShare"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imageShare"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageShare"
        app:layout_constraintTop_toTopOf="@id/imageShare" />

    <ImageView
        android:id="@+id/imageRate"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_rate"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageShare" />

    <TextView
        android:id="@+id/menuRate"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imageRate"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageRate"
        app:layout_constraintTop_toTopOf="@id/imageRate" />

    <ImageView
        android:id="@+id/imageMore"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_more"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageRate" />

    <TextView
        android:id="@+id/menuMore"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imageMore"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageMore"
        app:layout_constraintTop_toTopOf="@id/imageMore" />

    <View
        android:id="@+id/divider2"
        android:layout_width="fill_parent"
        android:layout_height="0.100000024dip"
        android:layout_marginTop="10.0dip"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageMore" />

    <TextView
        android:id="@+id/Developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/title_developer"
        android:textColor="@android:color/white"
        android:textSize="14.0sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <ImageView
        android:id="@+id/imageAbout"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_about"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Developer" />

    <TextView
        android:id="@+id/menuAbout"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/drawer_about"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imageAbout"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imageAbout"
        app:layout_constraintTop_toTopOf="@id/imageAbout" />

    <ImageView
        android:id="@+id/imagePrivacy"
        android:layout_width="26.0dip"
        android:layout_height="26.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_privacy"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAbout" />

    <TextView
        android:id="@+id/menuPrivacy"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="18.0sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/imagePrivacy"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/imagePrivacy"
        app:layout_constraintTop_toTopOf="@id/imagePrivacy" />

    <FrameLayout
        android:id="@+id/ads_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/admob_banner_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/admob_banner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fb_banner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>