<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.formats.UnifiedNativeAdView android:id="@id/native_ad_view"
                                                            android:layout_width="fill_parent"
                                                            android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:layout_gravity="start"
                      android:id="@+id/ad_attribution" android:background="#ffffcc66"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/title_ad_banner"
                      android:height="15.0dip" android:width="15.0dip"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                          android:layout_height="wrap_content" android:layout_marginBottom="10.0dip"
                          android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
                <androidx.cardview.widget.CardView android:layout_width="56.0dip" android:layout_height="56.0dip"
                                                   android:layout_margin="5.0dip" card_view:cardCornerRadius="5.0dip"
                                                   card_view:cardElevation="5.0dip"
                                                   xmlns:card_view="http://schemas.android.com/apk/res-auto">
                    <ImageView android:id="@id/icon" android:layout_width="56.0dip" android:layout_height="56.0dip"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout android:orientation="vertical" android:paddingStart="5.0dip" android:paddingTop="3.0dip"
                              android:paddingEnd="20.0dip" android:layout_width="fill_parent"
                              android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                                  android:layout_height="wrap_content">
                        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff626264"
                                  android:id="@id/primary" android:layout_width="fill_parent"
                                  android:layout_height="0.0dip" android:text="@string/app_name"
                                  android:maxLines="1" android:layout_weight="1.0"
                                  android:fontFamily="@font/open_sans_light"/>
                        <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip"
                                      android:layout_weight="1.0">
                            <me.zhanghai.android.materialratingbar.MaterialRatingBar android:layout_gravity="bottom"
                                                                                     android:id="@id/rating_bar"
                                                                                     android:layout_width="wrap_content"
                                                                                     android:layout_height="wrap_content"
                                                                                     android:rating="2.5"
                                                                                     android:stepSize="0.01"
                                                                                     app:mrb_progressTint="#ff64d0bc"
                                                                                     app:mrb_secondaryProgressTint="#ff64d0bc"
                                                                                     style="@style/Widget.MaterialRatingBar.RatingBar.Small"/>
                        </LinearLayout>
                        <TextView android:textSize="12.0sp" android:textStyle="bold" android:gravity="bottom"
                                  android:layout_gravity="bottom" android:id="@id/secondary"
                                  android:layout_width="wrap_content" android:layout_height="0.0dip"
                                  android:text="@string/dummy_title" android:layout_weight="1.0"
                                  android:fontFamily="@font/open_sans_light"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:id="@id/body" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:layout_marginLeft="20.0dip"
                      android:layout_marginRight="20.0dip" android:fontFamily="@font/open_sans_light"/>
            <com.google.android.gms.ads.formats.MediaView android:id="@id/media_view" android:layout_width="fill_parent"
                                                          android:layout_height="200.0dip"
                                                          android:layout_marginLeft="20.0dip"
                                                          android:layout_marginRight="20.0dip"/>
            <Button android:textSize="18.0sp" android:textColor="@color/gnt_white" android:id="@id/cta"
                    android:background="@drawable/button_options" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip"
                    android:fontFamily="@font/open_sans_light"/>
        </LinearLayout>
    </com.google.android.gms.ads.formats.UnifiedNativeAdView>
</RelativeLayout>